--- a/index.html
+++ b/index.html
@@ -367,6 +367,44 @@
                     <use href="./images/all-icons.svg#cross"></use>
                 </svg>
             </button>
+            <p class="modal-heading">Leave your contacts and we will call you back</p>
+            <form>
+                <div class="form-field">
+                    <label for="name" class="form-label">Name</label>
+                    <input class="form-input" type="text" name="name" id="name">
+                    <svg class="icon person" width="18" height="18">
+                        <use href="./images/all-icons.svg#person"></use>
+                    </svg>
+                </div>
+
+                <div class="form-field">
+                    <label for="phone" class="form-label">Phone</label>
+                    <input class="form-input" type="tel" name="phone" id="phone">
+                    <svg class="icon" width="18" height="24">
+                        <use href="./images/all-icons.svg#phone"></use>
+                    </svg>
+                </div>
+
+                <div class="form-field">
+                    <label for="email-form" class="form-label">Email</label>
+                    <input class="form-input" type="email" name="email" id="email-form">
+                    <svg class="icon" width="18" height="24">
+                        <use href="./images/all-icons.svg#envelope"></use>
+                    </svg>
+                </div>
+
+                <div class="form-field form-comment">
+                    <label for="comment" class="form-label">Comment</label>
+                    <textarea class="form-comment-area" name="comment" id="comment" placeholder="Text input"></textarea>
+                </div>
+
+                <div class="form-field legal-agreement">
+                    <input class="checkbox" type="checkbox" name="legal-agreement" value="accepted" id="legal-agreement">
+                    <label for="legal-agreement" class="form-label">I accept the terms and conditions of the <a class="plicy-link" href="#">Privacy Policy</a></label>
+                </div>
+
+                <button type="submit" class="modal-send">Send</button>
+            </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
