--- a/portfolio.html
+++ b/portfolio.html
@@ -219,7 +219,7 @@
                 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
             <div class="join-networks">
-                <p class="join-heading">Social media</p>
+                <p class="footer-heading">Social media</p>
                 <ul class="list">
                     <li class="item">
                         <a href="/" class="link">
@@ -251,7 +251,22 @@
                     </li>
                 </ul>
             </div>
+            <div class="newsletter">
+                <p class="footer-heading">Subscribe</p>
+                <div class="form">
+                    <form>
+                        <label for="footer-input" class="visually-hidden">Subscribe</label>
+                        <input class="footer-input" type="email" name="email" placeholder="E-mail" id="footer-input">
+                    </form>
+                    <button class="subscribe-button" type="submit">
+                        Subscribe
+                        <svg width="24" height="24">
+                            <use href="./images/all-icons.svg#telegram"></use>
+                        </svg>
+                    </button>
+                </div>
+            </div>
         </div>
-    </footer>
+    </footer>   
 </body>
 </html>
