--- a/portfolio.html
+++ b/portfolio.html
@@ -253,18 +253,16 @@
             </div>
             <div class="newsletter">
                 <p class="footer-heading">Subscribe</p>
-                <div class="form">
-                    <form>
-                        <label for="footer-input" class="visually-hidden">Subscribe</label>
-                        <input class="footer-input" type="email" name="email" placeholder="E-mail" id="footer-input">
-                    </form>
+                <form class="form">
+                    <label for="footer-input" class="visually-hidden">Subscribe</label>
+                    <input class="footer-input" type="email" name="email" placeholder="E-mail" id="footer-input">
                     <button class="subscribe-button" type="submit">
                         Subscribe
                         <svg width="24" height="24">
                             <use href="./images/all-icons.svg#telegram"></use>
                         </svg>
                     </button>
-                </div>
+                </form>
             </div>
         </div>
     </footer>   
